--- a/src/Components/Conferencia.module.css
+++ b/src/Components/Conferencia.module.css
@@ -1,19 +1,18 @@
 /* src/Components/Conferencia.module.css */
 
 .container {
-    max-width: 600px;
-    margin: 0 auto;
-  }
-  
-  h1 {
-    text-align: center;
-  }
-  
-  .form-group {
-    margin-bottom: 15px;
-  }
-  
-  button {
-    padding: 10px 20px;
-  }
-  
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+h1, h2, h3 {
+  text-align: center;
+}
+
+.category {
+  margin-bottom: 20px;
+}
+
+.tool-item {
+  margin-left: 20px;
+}
